src/app/dashboard/widget-modal/add-widget-modal/add-widget-modal.component.scss
.tabs-custom-pre-build {
  @apply h-full;

  ::ng-deep .mat-tab-header {
    .mat-tab-label:hover {
      @apply text-accent-500;
    }

    .mat-tab-label.mat-tab-label-active {
      @apply text-accent-500;
    }

    .mat-tab-label .mat-tab-label-content {
      @apply font-semibold;
    }
  }

  ::ng-deep .mat-tab-body-wrapper {
    height: 100% !important;
  }

  ::ng-deep mat-ink-bar.mat-ink-bar {
    background-color: #1e4994 !important;
  }
}

.height-container {
  height: calc(100% - 40px) !important;
}

